--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,11 +1,11 @@
 <div class="chat-header">
   <div class="left-header">
-    <div class="chat-title">
+    <div class="header-title">
       hogefuga
     </div>
   </div>
   <div class="right-header">
-    <div class="edit-room">
+    <div class="header-button">
       <a href="#">チャットを終了する</a>
     </div>
   </div>
@@ -33,12 +33,13 @@
   </div>
 </div>
 
-<div class="form">
-  <form class="new-message">
-    <input class="input-text" placeholder="type a message">
+<%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f|%>
+  <div class="form-input">
+    <%= f.text_field :content, class: 'form-message', placeholder: 'type a message' %>
     <label class="form-image">
       <span class="image-file">画像</span>
-      <input type="file" class="hidden"></label>
-    <input class="submit-btn" type="submit" valie="送信">
-  </form>
-</div>
+      <%= f.file_field :image, class: 'hidden' %>
+    </label>
+  </div>
+  <%= f.submit '送信', class: 'form-submit' %>
+<% end %>
